examples/good/02_1_arithmetic.soy
a = 3 + 10;
print(a);

if (a == 13) {
    print("13");
}

print(a > 20);

c = "ala ma kota";

print(c + " i psa");

print("2_1_PASSED");