examples/bad/02_1_arithmetic_errors.soy
a = 3 + "ala ma kota";